Fix add-opens for appimage